--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@
   font-size: clamp(32px, 5vw, 64px);
   line-height: clamp(28px, 4.5vw, 60px);
 
-  background: linear-gradient(180deg, #E55C34 0%, #FA8230 36.54%, #e45d86 100%);
+  background: linear-gradient(180deg, #2d69e9 0%, #9d60ff 36.54%, #f15081 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   user-select: none;
@@ -263,9 +263,6 @@ button {
 
 
 /* ===== SLIDER ===== */
-/* @import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/violet.css"; */
-
 .SliderRoot {
 	position: relative;
 	display: flex;
