--- a/src/index.css
+++ b/src/index.css
@@ -129,14 +129,14 @@
     padding: 0;
     width: 100%;
   }
-  
+
   /* ADDED BY CHANSOVISOTH */
   html {
     margin: 0;
     padding: 0;
     width: 100%;
   }
-  
+
   #root {
     width: 100%;
     min-height: 100vh;
@@ -186,22 +186,16 @@
   cursor: pointer;
 }
 
-
-
 /* ===== BUTTONS ===== */
 button {
   cursor: pointer;
 }
-
-
 
 /* ===== CARDS ===== */
 .card-profile:hover {
   filter: brightness(0.8) scale(1.05) !important;
   transition: filter 0.3s ease !important;
 }
-
-
 
 /* ===== FOOTER ===== */
 .footer-icon {
@@ -260,66 +254,23 @@ button {
   opacity: 0.9;
 }
 
-
-
-/* ===== SLIDER ===== */
-.SliderRoot {
-	position: relative;
-	display: flex;
-	align-items: center;
-	user-select: none;
-	touch-action: none;
-	width: 200px;
-	height: 20px;
+/* ===== EASY CSS ===== */
+.purple-gradient {
+  background: linear-gradient(180deg, #5f2de9 0%, #f150ce 100%);
 }
 
-.SliderTrack {
-	background-color: var(--black-a10);
-	position: relative;
-	flex-grow: 1;
-	border-radius: 9999px;
-	height: 3px;
+.green-gradient {
+  background: linear-gradient(135deg, #6BCE90 0%, #409DA1 66%, #2F698B 100%)
 }
 
-.SliderRange {
-	position: absolute;
-	background-color: white;
-	border-radius: 9999px;
-	height: 100%;
+.hero-text-gradient {
+  background: linear-gradient(to right, #6366f1 0%, #ec4899 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  filter: brightness(1.2);
 }
-
-.SliderThumb {
-	display: block;
-	width: 20px;
-	height: 20px;
-	background-color: white;
-	box-shadow: 0 2px 10px var(--black-a7);
-	border-radius: 10px;
-}
-.SliderThumb:hover {
-	background-color: var(--violet-3);
-}
-.SliderThumb:focus {
-	outline: none;
-	box-shadow: 0 0 0 5px var(--black-a8);
-}
-
-
-
-
-
-/* ===== LOGIN ===== */
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -498,8 +449,6 @@ button {
     transform: scale(1.00);
   }
 }
-
-
 
 /* ===== PODIUM ANIMATION ===== */
 .animate-bounce-excited-first {
