--- a/src/index.css
+++ b/src/index.css
@@ -784,3 +784,58 @@ button {
     display: none;
   }
 }
+
+/* ===== AUTOFILL STYLES ===== */
+/* Override browser's default autofill styling to match theme colors */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px hsl(var(--background)) inset !important;
+  -webkit-text-fill-color: hsl(var(--foreground)) !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  color: hsl(var(--foreground)) !important;
+}
+
+/* Dark mode support using class-based approach */
+.dark input:-webkit-autofill,
+.dark input:-webkit-autofill:hover,
+.dark input:-webkit-autofill:focus,
+.dark input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px hsl(var(--background)) inset !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  color: white !important;
+}
+
+/* Dark mode support using data-attribute approach (fallback) */
+[data-theme="dark"] input:-webkit-autofill,
+[data-theme="dark"] input:-webkit-autofill:hover,
+[data-theme="dark"] input:-webkit-autofill:focus,
+[data-theme="dark"] input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px hsl(var(--background)) inset !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  color: white !important;
+}
+
+/* Additional autofill override for better compatibility */
+input:-webkit-autofill::first-line {
+  font-family: inherit !important;
+  color: hsl(var(--foreground)) !important;
+}
+
+.dark input:-webkit-autofill::first-line {
+  color: white !important;
+}
+
+/* For Firefox autofill */
+input:-moz-autofill {
+  background-color: hsl(var(--background)) !important;
+  color: hsl(var(--foreground)) !important;
+}
+
+.dark input:-moz-autofill {
+  background-color: hsl(var(--background)) !important;
+  color: white !important;
+}
